[gd_scene load_steps=12 format=3 uid="uid://tkmbhe53qkue"]

[ext_resource type="Script" uid="uid://dho753aw4nxqa" path="res://Scenes/settings.gd" id="1_4geyq"]
[ext_resource type="Texture2D" uid="uid://b1amcs22s15gb" path="res://assets/Animations/Background.png" id="2_i44u3"]
[ext_resource type="Shader" uid="uid://ctxcriyslebcf" path="res://assets/shaders/screen_effect.gdshader" id="3_aaqfp"]
[ext_resource type="Texture2D" uid="uid://c73nfy1vjofx0" path="res://assets/shaders/monitor2.png" id="4_j2dne"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lhmql"]
texture = ExtResource("2_i44u3")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aaqfp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2dne"]
bg_color = Color(0.699653, 0.699654, 0.699653, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6kysc"]
bg_color = Color(0.489622, 0.489622, 0.489622, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vr2p"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6kysc"]
shader = ExtResource("3_aaqfp")

[sub_resource type="QuadMesh" id="QuadMesh_6vr2p"]
size = Vector2(1152, 864)
center_offset = Vector3(576, 432, 0)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4geyq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lhmql")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = -105.0
offset_right = 522.0
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Resolution" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="back_menu" type="Button" parent="."]
layout_mode = 2
offset_left = 267.0
offset_top = 597.0
offset_right = 867.0
offset_bottom = 719.0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_aaqfp")
theme_override_styles/hover = SubResource("StyleBoxFlat_j2dne")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6kysc")
theme_override_styles/normal = SubResource("StyleBoxFlat_6vr2p")
text = "Back To Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="MonitorLayer" type="CanvasLayer" parent="."]
visible = false
follow_viewport_scale = 0.5

[node name="MeshInstance2D" type="MeshInstance2D" parent="MonitorLayer"]
material = SubResource("ShaderMaterial_6kysc")
mesh = SubResource("QuadMesh_6vr2p")

[node name="OldMonitor" type="TextureRect" parent="MonitorLayer"]
visible = false
offset_left = -53.0
offset_top = -54.0
offset_right = 1373.0
offset_bottom = 851.0
texture = ExtResource("4_j2dne")
stretch_mode = 4

[connection signal="value_changed" from="MarginContainer/VBoxContainer/volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckBox" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="pressed" from="back_menu" to="." method="_on_back_menu_pressed"]
